# mini-agent

./: .gitignore  CLA.txt  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  User_Manual.md  openapi.json  pyproject.toml
playground/: package-lock.json  package.json  start_https.sh  vite.config.ts
playground/certs/: cert.pem  key.pem  openssl.cnf
playground/src/: App.vue  main.ts
playground/src/components/: Header.vue  InteractionView.vue  StreamingView.vue
playground/src/services/: api.ts
playground/src/store/: interaction.ts
src/: .env.example  chat.py  dto.py  main.py  planner.py  prompts.py
src/storage/: README.md  base.py  memory_storage.py  postgres_storage.py
src/store/: __init__.py
src/store/opensearch/: __init__.py  base.py
src/store/opensearch/embeddings/: text_embedding.py  vision_embedding.py
utils/: generate_openapi.py
