[project]
name = "lybic-guiagent-mini"
version = "0.1.1"
description = "It is a minimal administrative lybic agent instance that only supports calls via RESTful APIs and only supports the ui-tars model."
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.29.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "langgraph>=1.0.3",
    "lybic>=0.10.1,<1.0.0",
    "openai",
    "opensearch-py>=3.0.0",
    "uvicorn>=0.32.0",
    "volcengine-python-sdk>=4.0.1",
]

[project.scripts]
lybic-guiagent = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
